Amélioration accessibilité : ajout ARIA, tabindex, labels ; correction des contrastes via WAVE et WebAIM"

--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ header {
   justify-content: space-between;
   align-items: center;
   padding: 10px 20px;
-  background-color: #cb600f;
+  background-color: #328E6E;
   color: #fff;
 }
   /* Logo */
@@ -61,9 +61,9 @@ header {
 }
 
 .navbar a {
-  color: hsl(0, 0%, 100%);
+  color: #ffffff;
   text-decoration: none;
-  font-size: 1.3em;
+  font-size: 1.5em;
 }
 
 .navbar a:hover {
@@ -116,7 +116,7 @@ header {
   height: 100%;
 }
 .slide img {
-   border: 1px solid #ffb347;
+   border: 1px solid #49b171;
   width: 80%;
   height: 80%;
   object-fit: cover
@@ -139,7 +139,7 @@ display: none;
 #image1:checked ~ .dots  label[for="image1"],
 #image2:checked ~ .dots  label[for="image2"],
 #image3:checked ~ .dots  label[for="image3"] {
-  background: #ef9e75;
+  background: #1c8d36;
 }
 .dots {
   display: flex;
@@ -148,7 +148,6 @@ display: none;
   bottom: 15px;
   left: 50%;
   transform: translateX(-50%);
-
   gap: 5px;
 }
 
@@ -159,7 +158,7 @@ display: none;
    border-radius: 50%;
    cursor: pointer;
    transition: all 0.15s  ease;
-   background-color: #FF6F00;
+   background-color: #32bc89;
  
 }
 .arrows {
@@ -196,10 +195,15 @@ pointer-events: none;
 .arrow:hover {
   background: rgba(0, 0, 0, 0.8);
 }
+label:focus {
+  outline: 2px solid #2bab5c;
+  outline-offset: 2px;
+}
 
 .cta-section {
   width: 100%;
- 
+  background-color: #f8f8f7;
+
 }
 
 .cta-container {
@@ -229,8 +233,8 @@ pointer-events: none;
 }
 
 .cta-input button {
-  background-color: #4FC3F7;
-  color: #fff;
+  background-color: #328E6E;
+  color: #ffffff;
   border: 2px solid #000;
   padding: 10px 20px;
   font-weight: bold;
@@ -239,9 +243,9 @@ pointer-events: none;
 }
 
 .cta-btn {
-  background-color: #FF6F00;
+  background-color: #67AE6E;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   padding: 40px 60px;
   margin-top: 40px;
@@ -260,12 +264,13 @@ pointer-events: none;
 }
 
 .btn {
-  background-color: #4FC3F7;
+  background-color: #81E7AF;
   color: white;
-  border: 2px solid #4FC3F7;
+  border: 2px solid #169976;
   padding: 12px 24px;
   border-radius: 10px;
   font-weight: bold;
+  font-size: medium;
   cursor: pointer;
   opacity: 1; 
 }
@@ -280,7 +285,7 @@ pointer-events: none;
 
 .titre-section {
   font-size: 3rem;
-  color: #ff6f61;
+  color: #328E6E;
   margin-bottom: 1rem;
 
 }
@@ -350,7 +355,7 @@ cursor: pointer;
 
 .item {
 
-  border: 1px solid #ffb347; 
+  border: 1px solid #45af8a; 
   overflow: hidden;
 }
 
@@ -430,6 +435,7 @@ grid-column: 5 / 6;
 .statistique-texte h2 {
   font-size: 24px;
   margin-bottom: 10px;
+  color: #328E6E;
 }
 
 .statistique-texte p {
@@ -455,7 +461,7 @@ grid-column: 5 / 6;
 
 .equipe-section h2 {
   font-size: 2rem;
-  color: #ff6f61;
+  color: #1a1a1a;
   margin-bottom: 1rem;
 }
 
@@ -497,10 +503,10 @@ grid-column: 5 / 6;
 
 .membre .poste {
   font-style: italic;
-  color: #ff6f61;
-   font-size: 0.9rem;
+  color: #03A791;
+   font-size: 1rem;
    font-weight: bolder;
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.8rem;
 }
 
 .membre p {
@@ -747,7 +753,7 @@ height: 15px;
 
 .fil-ariane a {
   text-decoration: none;
-  color: #004d40;
+  color: #005744;
   text-decoration-line: underline;
   font-size: 1em;
   font-weight: bolder;
@@ -833,12 +839,13 @@ footer {
 
 .visually-hidden {
   position: absolute !important;
-  width: 1px;
-  height: 1px;
-  padding: 0;
-  overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  white-space: nowrap;
+  width: 1px; 
+  height: 1px; 
+  padding: 0; 
+  margin: -1px; 
+  overflow: hidden; 
+  clip: rect(0, 0, 0, 0); 
+  white-space: nowrap; 
   border: 0;
 }
 
@@ -1056,7 +1063,7 @@ footer {
 .statistique-texte h2 {
   font-size: 2em;
   margin-bottom: 10px;
-  color: #FF6F00;
+  color: #005744;
 }
 
 .statistique-texte p {
@@ -1101,9 +1108,9 @@ cursor: pointer;
 }
 
 .btn {
-  background-color: #4FC3F7;
+  background-color: #187a46;
   color: white;
-  border: 2px solid #4FC3F7;
+  border: 2px solid #a2f3c4;
   padding: 10px 16px;
   border-radius: 10px;
   font-weight: bold;
@@ -1112,7 +1119,7 @@ cursor: pointer;
 }
 
 .btn:hover {
-  background-color: #039BE5;
+  background-color: #5ac072;
 }
 
 
